--- a/ibeacondemo/src/main/res/layout/device_pannel.xml
+++ b/ibeacondemo/src/main/res/layout/device_pannel.xml
@@ -350,6 +350,25 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:gravity="center|center_horizontal|center_vertical"
+                android:orientation="horizontal"
+                android:weightSum="1.0">
+
+
+                <Button
+                    android:id="@+id/dfuDevice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:text="@string/kb_dfu_device" />
+
+
             </LinearLayout>
+
+
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
