--- a/ibeacondemo/src/main/res/layout/activity_cfg_beacon_dfu.xml
+++ b/ibeacondemo/src/main/res/layout/activity_cfg_beacon_dfu.xml
@@ -12,9 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="18dp"
         android:text="@string/DEVICE_DFU_STATUS"
-        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,7 +21,7 @@
         android:id="@+id/textStatusDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         android:text="@string/DEVICE_CHECK_UPDATE"
         app:layout_constraintBottom_toBottomOf="@+id/textStatusTitle"
         app:layout_constraintStart_toEndOf="@+id/textStatusTitle" />
@@ -39,5 +38,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textStatusTitle" />
+
+    <TextView
+        android:id="@+id/releaseNotesTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/UPDATE_RELEASE_NOTES"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/progressBar"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+
+    <TextView
+        android:id="@+id/releaseNotes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:text="@string/DEVICE_LATEST_VERSION"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/releaseNotesTitle"
+        app:layout_constraintTop_toBottomOf="@+id/releaseNotesTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
